--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       My goal now is to find a job where I can keep learning and be a useful employee in the process of building and/or maintaining projects.
     </p></div>
     <div class="zone blue grid-wrapper">
-      <div class="box zone"><a href="https://github.com/KamenP38/music_playlist" target="_blank"><p>Music Playlist Demo</p></a><img src="./img/files_2.png"></div>
-      <div class="box zone"><a href="https://github.com/KamenP38/tacoTruck" target="_blank"><p>Taco truck</p></a><img src="./img/files_2.png"></div>
+      <div class="box zone"><a href="https://github.com/KamenP38/music_playlist" target="_blank"><p>Music Playlist Demo</p><img src="./img/files_2.png"></a></div>
+      <div class="box zone"><a href="https://github.com/KamenP38/tacoTruck" target="_blank"><p>Taco truck</p><img src="./img/files_2.png"></a></div>
       <div class="box zone"><a href="https://github.com/KamenP38/DataScienceProjects" target="_blank"><p>Data Science</p></a><img src="./img/files_2.png"></div>
-      <div class="box zone"><a href="https://github.com/KamenP38/to-do-list" target="_blank"><p>To-Do List</p></a><img src="./img/files_2.png"></div>
-      <div class="box zone"><a href="https://github.com/KamenP38/background-generator" target="_blank"><p>Background Generator</p></a><img src="./img/files_2.png"></div>
+      <div class="box zone"><a href="https://github.com/KamenP38/to-do-list" target="_blank"><p>To-Do List</p><img src="./img/files_2.png"></a></div>
+      <div class="box zone"><a href="https://github.com/KamenP38/background-generator" target="_blank"><p>Background Generator</p><img src="./img/files_2.png"></a></div>
       <div class="box zone">Empty...<img src="./img/files_2.png"></div>
       <div class="box zone">Empty...<img src="./img/files_2.png"></div>
       <div class="box zone">Empty...<img src="./img/files_2.png"></div>
