--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       My goal now is to find a job where I can keep learning and be a useful employee in the process of building and/or maintaining projects.
     </p></div>
     <div class="zone blue grid-wrapper">
-      <div class="box zone"><a href="https://github.com/KamenP38/music_playlist" target="_blank"><p>Music Playlist Demo</p><img src="./img/files_2.png"></a></div>
-      <div class="box zone"><a href="https://github.com/KamenP38/tacoTruck" target="_blank"><p>Taco truck</p><img src="./img/files_2.png"></a></div>
-      <div class="box zone"><a href="https://github.com/KamenP38/DataScienceProjects" target="_blank"><p>Data Science</p></a><img src="./img/files_2.png"></div>
-      <div class="box zone"><a href="https://github.com/KamenP38/to-do-list" target="_blank"><p>To-Do List</p><img src="./img/files_2.png"></a></div>
-      <div class="box zone"><a href="https://github.com/KamenP38/background-generator" target="_blank"><p>Background Generator</p><img src="./img/files_2.png"></a></div>
+      <a href="https://github.com/KamenP38/music_playlist" target="_blank"><div class="box zone"><p>Music Playlist Demo</p><img src="./img/files_2.png"></div></a>
+      <a href="https://github.com/KamenP38/tacoTruck" target="_blank"><div class="box zone"><p>Taco truck</p><img src="./img/files_2.png"></div></a>
+      <div class="box zone"><p>Data Science</p></a><img src="./img/files_2.png"></div>
+      <a href="https://github.com/KamenP38/DataScienceProjects" target="_blank"><div class="box zone"><p>To-Do List</p><img src="./img/files_2.png"></div></a>
+      <a href="https://github.com/KamenP38/background-generator" target="_blank"><div class="box zone"><p>Background Generator</p><img src="./img/files_2.png"></div></a>
       <div class="box zone">Empty...<img src="./img/files_2.png"></div>
       <div class="box zone">Empty...<img src="./img/files_2.png"></div>
       <div class="box zone">Empty...<img src="./img/files_2.png"></div>
@@ -32,7 +32,7 @@
       <ul class="main-footer">
         <li><strong>email: </strong>kpetkov@hawk.iit.edu</li>
         <li><strong>mobile: </strong>+359887374400</li>
-        <li><strong>github: </strong>https://github.com/KamenP38</li>
+        <li><strong>github: </strong><a href = "https://github.com/KamenP38">https://github.com/KamenP38</a></li>
       </ul>
     </footer>
   </div>
