--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="zone blue grid-wrapper">
       <div class="box zone"><a href="https://github.com/KamenP38/music_playlist" target="_blank"><p>Music Playlist Demo</p><img src="./img/files_2.png"></a></div>
       <div class="box zone"><a href="https://github.com/KamenP38/tacoTruck" target="_blank"><p>Taco truck</p><img src="./img/files_2.png"></a></div>
-      <div class="box zone"><a href="https://github.com/KamenP38/DataScienceProjects" target="_blank"><p>Data Science</p></a><img src="./img/files_2.png"></div>
+      <div class="box zone"><a href="https://github.com/KamenP38/DataScienceProjects" target="_blank"><p>Data Science</p><img src="./img/files_2.png"></a></div>
       <div class="box zone"><a href="https://github.com/KamenP38/to-do-list" target="_blank"><p>To-Do List</p><img src="./img/files_2.png"></a></div>
       <div class="box zone"><a href="https://github.com/KamenP38/background-generator" target="_blank"><p>Background Generator</p><img src="./img/files_2.png"></a></div>
       <div class="box zone">Empty...<img src="./img/files_2.png"></div>
