--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li class="push"><a href="">Contacts</a></li>
       </ul>
     </nav> -->
-    <div class="container zone"><img class="photo" src="KamenPetkov_Orange.jpg"><p>My name is Kamen Petkov and this is my portfolio website. 
+    <div class="container zone"><p><img class="photo" src="KamenPetkov_Orange.jpg">My name is Kamen Petkov and this is my portfolio website. 
       Here you can find some of my projects that show my skills in Java, JavaScript, R, HTML and CSS in terms of language knowledge. In some of 
       my projects you can also see my logical thinking and how I used the available tools to build something meaningful and useful.<br>
       My goal now is to find a job where I can keep learning and be a useful employee in the process of building and/or maintaining projects.
