--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
       </ul>
     </nav> -->
     <div class="container zone"><p><img class="photo" src="KamenPetkov_Orange.jpg">My name is Kamen Petkov and this is my portfolio website. 
-      Here you can find some of my projects that show my skills in Java, JavaScript, R, HTML and CSS in terms of language knowledge. In some of 
-      my projects you can also see my logical thinking and how I used the available tools to build something meaningful and useful.<br>
+      Here you can find some of my projects that show my skills in Java, JavaScript, R, HTML and CSS in terms of language knowledge. In my 
+      projects you can also see my logical thinking and how I used the available tools to build something meaningful and useful.<br>
       My goal now is to find a job where I can keep learning and be a useful employee in the process of building and/or maintaining projects.
     </p></div>
     <div class="zone blue grid-wrapper">
       <div class="box zone"><a href="https://github.com/KamenP38/music_playlist" target="_blank"><p>Music Playlist Demo</p><img src="./img/files_2.png"></a></div>
-      <div class="box zone"><a href="https://github.com/KamenP38/tacoTruck" target="_blank"><p>Taco truck</p><img src="./img/files_2.png"></a></div>
+      <div class="box zone"><a href="https://github.com/KamenP38/tacoTruck" target="_blank"><p>Taco Truck</p><img src="./img/files_2.png"></a></div>
       <div class="box zone"><a href="https://github.com/KamenP38/DataScienceProjects" target="_blank"><p>Data Science</p><img src="./img/files_2.png"></a></div>
       <div class="box zone"><a href="https://github.com/KamenP38/to-do-list" target="_blank"><p>To-Do List</p><img src="./img/files_2.png"></a></div>
       <div class="box zone"><a href="https://github.com/KamenP38/background-generator" target="_blank"><p>Background Generator</p><img src="./img/files_2.png"></a></div>
+      <!-- <div class="box zone">Empty...<img src="./img/files_2.png"></div>
       <div class="box zone">Empty...<img src="./img/files_2.png"></div>
-      <div class="box zone">Empty...<img src="./img/files_2.png"></div>
-      <div class="box zone">Empty...<img src="./img/files_2.png"></div>
+      <div class="box zone">Empty...<img src="./img/files_2.png"></div> -->
     </div>
     <footer class="zone yellow">
       <ul class="main-footer">
